# finance-tracker

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  manage.py  pyproject.toml
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_bankaccount_user_cryptoholding_user_etfholding_user_and_more.py  0003_userpreferences.py  0004_userpreferences_address_line1_and_more.py  0005_superannuationsnapshot.py  0006_cryptoholding_coingecko_id.py  0007_etfholding_exchange.py  0008_assetsnapshot_networthsnapshot.py  0009_alter_assetsnapshot_price_per_unit_and_more.py
backend/api/tests/: conftest.py  test_models.py  test_views.py
backend/networth_tracker/: settings.py  urls.py  wsgi.py
frontend/: .dockerignore  .prettierignore  Dockerfile  Dockerfile.dev  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: Button.jsx  Card.jsx  Input.jsx  Modal.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: BankAccounts.jsx  CryptoHoldings.jsx  Dashboard.jsx  ETFHoldings.jsx  Login.jsx  NetWorthHistory.jsx  Register.jsx  Settings.jsx  StockHoldings.jsx  Superannuation.jsx
frontend/src/utils/: format.js
