[project]
name = "networth-tracker"
version = "0.1.0"
description = "A Django REST API for tracking net worth across multiple asset types"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.9,<6.0",
    "djangorestframework>=3.15.0",
    "django-cors-headers>=4.3.0",
    "python-dotenv>=1.0.0",
    "djangorestframework-simplejwt>=5.3.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = []
